# arlo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.txt  Makefile  README.ja.md  README.md  README.zh-TW.md  tokyo.md
.github/workflows/: ci.yml  deploy-website.yml
.kiro/specs/rust-agent-framework/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: lib.rs  main.rs
crates/agent-cli/src/tui/: app.rs  approval.rs  commands.rs  event_loop.rs  input.rs  mod.rs  notifications.rs  render.rs
crates/agent-cli/src/web/: agui.rs  mod.rs  server.rs  session.rs  ws_approval.rs
crates/agent-cli/tests/: web_integration.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  compactor.rs  config.rs  config_resolver.rs  error.rs  event.rs  executor.rs  fs_session_store.rs  guardrail.rs  in_memory_task_store.rs  lib.rs  message.rs  model.rs  next_step.rs  pattern.rs  permission.rs  profile.rs  recovery.rs  run_loop.rs  session_store.rs  settings.rs  skill.rs  state.rs  stream.rs  sub_agent.rs  task_store.rs  todolist_tool.rs  tool.rs
crates/agent-core/src/compaction/: config.rs  full_summarize.rs  layer.rs  mod.rs  session_memory.rs  tokens.rs  tools_compact.rs
crates/agent-core/tests/: background_subagent_repro.rs  compaction_integration.rs  event_stream_property_tests.rs  executor_property_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: anthropic_http.rs  lib.rs  model_override.rs  openai_http.rs  provider.rs  retry.rs
crates/agent-llm/src/convert/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/agent-llm/tests/: anthropic_http_props.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: client.rs  error.rs  lib.rs  transport.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/proptest-regressions/html_to_markdown/: whitespace.txt
crates/agent-tools/src/: file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  lib.rs  shell.rs  web_fetch.rs  web_search.rs
crates/agent-tools/src/html_to_markdown/: commonmark.rs  escape.rs  mod.rs  node_info.rs  options.rs  rules.rs  whitespace.rs
doc/: agent-framework.md  agent-framework.zh-TW.md  agent-loop-flow-audit.md  claude-code-agentic-loop.md  configuration.md  feature-roadmap.md  reference-claude-code-system-prompt.md  reference-openai-codex-cli-system-prompt.md  sub-agent-task-coordination.md
doc/session-history/: design.md  spec.md
docs/superpowers/specs/: 2026-07-11-web-ui-design.md
scripts/: test-rdsec.sh
web/: index.html  package-lock.json
web/src/: App.tsx  index.css  types.ts  useAgentSession.ts
web/src/components/: ApprovalQueue.tsx  ChatPane.tsx  SessionBanner.tsx  Sidebar.tsx  Toasts.tsx
website/: 404.html  index.html  main.js  styles.css
