[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arlo"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[dev-dependencies]
proptest = { workspace = true }
