[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "arlo"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
dirs = "5"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
unicode-width = "0.2"
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-tungstenite = { workspace = true }
