[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
