[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
