[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
url = "2"
scraper = "0.21"
ego-tree = "0.9"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
